src/main/java/com/example/appgithubrepo/domain/error/ErrorGetAllReposDto.java
package com.example.appgithubrepo.domain.error;

public record ErrorGetAllReposDto(int httpStatus, String message) {
}